(executable
 (name main)
 (libraries yojson eio_main
  ;eio_ssl
  cryptokit pgocaml str ptime.clock.os logs.fmt fmt.tty)
 (preprocess (pps ppx_sql ppx_jlib))
 (link_flags :standard -cclib -lexpat -cclib -lidn)
 (foreign_stubs
  (language c)
  (names stringprepwrap idnawrap expatwrap)
  (flags -O2))
 )
